put clear: none on all attachmentcontainers to fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -1968,8 +1968,12 @@ table col.name, table col.title {
 	margin-bottom: 2em;
 }
 
-.blog-news .items-leading .attachmentsContainer, .blog-news .item .attachmentsContainer, .blog.meetstudents .attachmentsContainer, .blog-researchareas .attachmentsContainer, .undergradprograms .attachmentsContainer, .blog.awardshonors .attachmentsContainer {
+/*.blog-news .items-leading .attachmentsContainer, .blog-news .item .attachmentsContainer, .blog.meetstudents .attachmentsContainer, .blog-researchareas .attachmentsContainer, .undergradprograms .attachmentsContainer, .blog.awardshonors .attachmentsContainer {
 	clear: none;
+}*/
+
+.attachmentsContainer {
+	clear: none !important;
 }
 
 /*.item-page-news p {
